--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sample test app",
   "main": "test.js",
   "scripts": {
+    "build": "npm run build"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "shivay",
