--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sample test app",
   "main": "test.js",
   "scripts": {
+    "build": "echo Building the application",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "shivay",
